flowcontroller/yamls/networkpolicy-allow-processor-to-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-processor-to-elasticsearch
  annotations:
    flowDef:
      priority: 1
spec:
  policyTypes:
  - Ingress
  podSelector: 
    matchLabels:
      app: elasticsearch
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: processor
      namespaceSelector:
        matchLabels:
          name: ((/spec/namespace))
    ports:
    - protocol: TCP
      port: 9200
